Try to create an example VMOD in go but failed with link error
+./libvmod_example.go:64: undefined reference to `WS_Reserve'
+./libvmod_example.go:50: undefined reference to `WS_Release'
These two functions are defined in varnishd, not in libvarnishapi.so.

--- a/varnish/Dockerfile
+++ b/varnish/Dockerfile
@@ -9,17 +9,24 @@ RUN yum install -y epel-release https://repo.varnish-cache.org/redhat/varnish-4.
 
 ADD modify-libvmod-example-spec.sh /usr/local/sbin/
 
-## download, build and install vmod-example for varnish 4.1.x
+## download, build vmod-example for varnish 4.1.x
 RUN curl -sL -o /root/rpmbuild/SOURCES/libvmod-example.tar.gz https://github.com/varnish/libvmod-example/archive/4.1.tar.gz\
- && tar xf /root/rpmbuild/SOURCES/libvmod-example.tar.gz --strip-components=1 -C /root/rpmbuild/SPECS/ libvmod-example-4.1/vmod-example.spec\
- && chmod +x /usr/local/sbin/modify-libvmod-example-spec.sh\
- && bash /usr/local/sbin/modify-libvmod-example-spec.sh /root/rpmbuild/SPECS/vmod-example.spec\
- && rpmbuild -bb /root/rpmbuild/SPECS/vmod-example.spec\
- && rpm -i /root/rpmbuild/RPMS/x86_64/vmod-example-*.rpm
+ && tar xf /root/rpmbuild/SOURCES/libvmod-example.tar.gz -C /root/rpmbuild/SOURCES/\
+ && (cd /root/rpmbuild/SOURCES/libvmod-example-4.1\
+    && ./autogen.sh\
+    && ./configure --prefix=/usr\
+    && make)
+
+RUN curl -sL https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz | tar zxf - -C /usr/local\
+ && mkdir /root/gocode\
+ && echo 'export GOPATH=/root/gocode' >> /root/.bash_profile\
+ && echo 'export PATH="$GOPATH/bin:/usr/local/go/bin:$PATH"' >> /root/.bash_profile
+
+ADD libvmod_go_example/ /root/libvmod_go_example/
+RUN cp /root/rpmbuild/SOURCES/libvmod-example-4.1/{config.h,src/vcc_if.[ch]} /root/libvmod_go_example/
 
 ADD default.vcl.template /etc/varnish/
 ADD startup.sh /usr/local/sbin/
-
 RUN chmod +x /usr/local/sbin/startup.sh
 
 EXPOSE 6081
