Confirm WS_Reserve and WS_Release are linked in varnishd, not in varnish libraries

--- a/varnish/Dockerfile
+++ b/varnish/Dockerfile
@@ -25,6 +25,8 @@ RUN curl -sL https://storage.googleapis.com/golang/go1.5.1.linux-amd64.tar.gz | 
 ADD libvmod_go_example/ /root/libvmod_go_example/
 RUN cp /root/rpmbuild/SOURCES/libvmod-example-4.1/{config.h,src/vcc_if.[ch]} /root/libvmod_go_example/
 
+RUN curl -sL https://github.com/varnish/Varnish-Cache/archive/varnish-4.1.0.tar.gz | tar zxf - -C /root/rpmbuild/SOURCES/
+
 ADD default.vcl.template /etc/varnish/
 ADD startup.sh /usr/local/sbin/
 RUN chmod +x /usr/local/sbin/startup.sh
